--- a/Lab_2/Lab_2.csproj
+++ b/Lab_2/Lab_2.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Helper.cs" />
     <Compile Include="Models\LocalData.cs" />
     <Compile Include="Models\Notepad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
